--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "url": "https://github.com/drewletcher/html-data-parser/issues"
   },
   "devDependencies": {
-    "eslint": "^9.0.0"
+    "eslint": "^9.4.0"
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "sax": "github:isaacs/sax-js"
+    "sax": "github:isaacs/sax-js#semver:1.4"
   }
 }
