--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-data-parser",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Parse, search and stream HTML tabular data using Node.js and isaacs/sax-js.",
   "author": "Drew O. Letcher",
   "license": "MIT",
@@ -18,8 +18,8 @@
     "test": "testrunner.bat"
   },
   "bin": {
-    "hdp": "./html-data-parser.js",
-    "htmldataparser": "./html-data-parser.js"
+    "hdp": "html-data-parser.js",
+    "htmldataparser": "html-data-parser.js"
   },
   "repository": {
     "type": "git",
