--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=18.0.0"
   },
   "main": "lib/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "test": "testrunner.bat"
   },
