--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -83,7 +83,7 @@
     },
     {
       "type": "node-terminal",
-      "name": "---",
+      "name": "--- hdp",
       "request": "launch"
     },
     {
