--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-data-parser",
-  "version": "1.0.8",
+  "version": "1.1.9",
   "description": "Parse, search and stream HTML tabular data using Node.js and isaacs/sax-js.",
   "author": "Drew O. Letcher",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "tabular data",
     "parser"
   ],
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -26,9 +26,6 @@
   "repository": "git@github.com/drewletcher/html-data-parser.git",
   "homepage": "https://github.com/drewletcher/html-data-parser#readme",
   "bugs": "https://github.com/drewletcher/html-data-parser/issues",
-  "devDependencies": {
-    "eslint": "^9.24.0"
-  },
   "dependencies": {
     "colors": "^1.4.0",
     "jsonc-parser": "^3.3.1",
